--- a/ai_analist.ipynb
+++ b/ai_analist.ipynb
@@ -501,7 +501,7 @@
     "# Инициализация агента\n",
     "agent = initialize_agent(\n",
     "    tools=tools,\n",
-    "    llm=ChatOpenAI(api_key=\"sk-f8b7345eb09247468b17932c9884b04c\",\n",
+    "    llm=ChatOpenAI(api_key=\"sk-f8\",\n",
     "                   base_url=\"https://api.deepseek.com/v1\",\n",
     "                   model=\"deepseek-chat\",\n",
     "                   temperature=0),\n",
