--- a/all_code.ipynb
+++ b/all_code.ipynb
@@ -188,7 +188,7 @@
     "        logger.error(f\"Error loading to connect: {str(e)}\")\n",
     "        raise HTTPException(status_code=500, detail=f\"Error loading the model: {str(e)}\")\n",
     "    \n",
-    "client_ch = connect_to_base(os.environ.get(CH_HOST), os.environ.get(CH_PORT), os.environ.get(CH_USER), os.environ.get(CH_PASSWORD))  \n",
+    "client_ch = connect_to_base(os.environ.get('CH_HOST'), os.environ.get('CH_PORT'), os.environ.get('CH_USER'), os.environ.get('CH_PASSWORD'))  \n",
     "    \n",
     "    \n",
     "# Инструмент 1: Безопасный ClickHouse запрос\n",
